Fix top spacing on static pages

--- a/css/streetfocus.css
+++ b/css/streetfocus.css
@@ -132,7 +132,7 @@ body.map #monitor h2 {font-size: 16px; padding-bottom: 5px;}
 
 
 /* Static pages */
-body.about main, body.privacy main, body.contacts main {padding: 0 30px;}
+body.about main, body.privacy main, body.contacts main {padding-left: 30px; padding-right: 30px; padding-bottom: 40px;}
 img.banner {width: 400px; float: right; margin: 10px 0 10px 20px;}
 @media only screen and (max-width: 650px) {
 	img.banner {width: 100%;}
